@@ -1,0 +1,292 @@
+1722 7.2
+1723 7.8
+1724 5
+1725 5.7
+1726 5.2
+1727 6.3
+1728 5
+1729 4.6
+1730 6.4
+1731 5.7
+1732 5.5
+1733 6.6
+1734 6.7
+1735 7.3
+1736 6.5
+1737 6.5
+1738 7.1
+1739 4.7
+1740 4.5
+1741 5.8
+1742 4.6
+1743 7
+1744 5.4
+1745 4.4
+1746 5
+1747 4.5
+1748 4.9
+1749 5.1
+1750 5.6
+1751 4.5
+1752 5.8
+1753 3.9
+1754 4.1
+1755 4.2
+1756 3.9
+1757 4.8
+1758 4.6
+1759 5.6
+1760 4.6
+1761 6.1
+1762 5.7
+1763 4.8
+1764 5.9
+1765 5.7
+1766 6
+1767 4.7
+1768 4.8
+1769 4.8
+1770 5.1
+1771 4.1
+1772 4.3
+1773 6.4
+1774 4.2
+1775 7.1
+1776 6
+1777 4.9
+1778 5
+1779 7.1
+1780 4.3
+1781 5.9
+1782 4.2
+1783 5.4
+1784 3.1
+1785 3.7
+1786 3.9
+1787 4.9
+1788 3.8
+1789 5.5
+1790 5.6
+1791 6
+1792 5.5
+1793 5.8
+1794 7
+1795 4.2
+1796 5.9
+1797 6.4
+1798 6.4
+1799 4
+1800 4.7
+1801 6
+1802 5.3
+1803 4.8
+1804 4.4
+1805 3.7
+1806 4.7
+1807 4.8
+1808 4.7
+1809 4.1
+1810 3.9
+1811 5.9
+1812 3.7
+1813 5.7
+1814 4.1
+1815 5.3
+1816 4.1
+1817 5
+1818 5.8
+1819 5.9
+1820 4
+1821 4.8
+1822 6.9
+1823 5.2
+1824 5.9
+1825 5.9
+1826 6.7
+1827 5.8
+1828 5.3
+1829 3
+1830 5.1
+1831 4.7
+1832 5.2
+1833 5.5
+1834 6.3
+1835 5.4
+1836 4.4
+1837 4.1
+1838 3
+1839 4.6
+1840 4.6
+1841 4.8
+1842 6
+1843 5.2
+1844 3.6
+1845 4.5
+1846 5.9
+1847 5.1
+1848 5
+1849 4.6
+1850 4.7
+1851 5.2
+1852 5.4
+1853 4.7
+1854 5.8
+1855 4.1
+1856 3.7
+1857 5.6
+1858 5.9
+1859 6.1
+1860 4.6
+1861 5.2
+1862 4.2
+1863 6.7
+1864 4.3
+1865 5
+1866 4.6
+1867 2.5
+1868 5.8
+1869 4.8
+1870 4.3
+1871 3.1
+1872 6.3
+1873 5.9
+1874 5.4
+1875 3.4
+1876 4.1
+1877 3.7
+1878 5.4
+1879 4
+1880 4.9
+1881 3.1
+1882 5.7
+1883 4.9
+1884 4.8
+1885 4.2
+1886 5.2
+1887 5.3
+1888 2.6
+1889 5.1
+1890 5.7
+1891 5.1
+1892 4.1
+1893 4.1
+1894 5.9
+1895 4.4
+1896 5.7
+1897 5.5
+1898 5.1
+1899 4.5
+1900 4.5
+1901 5.4
+1902 2.9
+1903 5.2
+1904 4.3
+1905 5.3
+1906 5.6
+1907 4.6
+1908 4.8
+1909 4.2
+1910 5.8
+1911 6
+1912 4.9
+1913 5.9
+1914 6.6
+1915 3.4
+1916 4.8
+1917 4.3
+1918 5.2
+1919 4.4
+1920 6.1
+1921 5.9
+1922 4.3
+1923 4.2
+1924 5
+1925 5.2
+1926 4.7
+1927 4.8
+1928 4.5
+1929 4.9
+1930 6.6
+1931 4.3
+1932 5.8
+1933 5.4
+1934 7.2
+1935 5.8
+1936 6
+1937 6.2
+1938 7.1
+1939 6
+1940 3.7
+1941 3.5
+1942 3.3
+1943 6.8
+1944 5.9
+1945 5.7
+1946 5.4
+1947 4.8
+1948 5.8
+1949 6.8
+1950 5.7
+1951 5.8
+1952 4.5
+1953 6.6
+1954 5.1
+1955 4.7
+1956 3.8
+1957 5.2
+1958 4.3
+1959 6.5
+1960 5.3
+1961 6.2
+1962 4.4
+1963 4.7
+1964 5.4
+1965 4.3
+1966 4.3
+1967 5.6
+1968 4.8
+1969 4.7
+1970 4.1
+1971 5.5
+1972 6.1
+1973 5.8
+1974 6.4
+1975 7
+1976 4.7
+1977 5.2
+1978 4.5
+1979 4.6
+1980 4.6
+1981 4.6
+1982 5.5
+1983 6.1
+1984 5.9
+1985 3.4
+1986 5
+1987 3.6
+1988 5.6
+1989 7.1
+1990 7
+1991 6.2
+1992 6.7
+1993 5.9
+1994 6.1
+1995 5.7
+1996 5.1
+1997 6.7
+1998 5.7
+1999 7
+2000 7.4
+2001 6.5
+2002 6.9
+2003 6.6
+2004 6.5
+2005 6.9
+2006 7.5
+2007 7.1
+2008 7.5
+2009 6.6
+2010 4.8
+2011 7.6
+2012 6.2
+2013 6.9
