@@ -3,7 +3,7 @@ The Data set consists of Essentialy these parameters: Time (in format year-month
 
 The three main questions we are interested in from these measurements are:
 
-1. Has the annual average temperature in Uppsala increased significantly since the industrial revolution in Sweden, approx 1880?
+1. How the annual average temperature in Uppsala changed since the industrial revolution in Sweden, approx 1880?
 
 2. How does the length of winter, according to SMHI's metereological definition of winter, change with latitude?
 
